[gd_scene load_steps=2 format=3 uid="uid://dialogue_scene"]

[ext_resource type="Theme" uid="uid://b7w5k8j6x2q1a" path="res://resources/ui_theme.tres" id="1"]
[ext_resource type="Script" path="res://scripts/ui/DialogueScene.gd" id="2"]

[node name="DialogueScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 0.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="NPCNameLabel" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "NPC Name"
add_theme_font_size_override("font_size", 18)
custom_minimum_size = Vector2(0, 30)

[node name="DialogueText" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Dialogue text goes here..."
autowrap_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="HSeparator" type="HSeparator" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ContinueHint" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Click a choice or press Space to continue..."
add_theme_font_size_override("font_size", 10)
custom_minimum_size = Vector2(0, 20)
horizontal_alignment = 1
